--- a/09-structure/styles/blocks/footer/footer.scss
+++ b/09-structure/styles/blocks/footer/footer.scss
@@ -2,6 +2,7 @@
 
 .footer {
   font-family: 'Inter', Arial, sans-serif;
+  background-image: url("../images/card_1.jpg");
   flex-shrink: 0;
   /*Стики футер*/
   padding: 30px 0 60px;
